--- a/src/main/resources/templates/user/member/login.html
+++ b/src/main/resources/templates/user/member/login.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <h1>로그인</h1>
 
-<form action="doLogin">
+<form method="POST" action="login">
     <input type="text" placeholder="아이디" name="userId">
     <input type="password" placeholder="비밀번호" name="password">
     <input type="submit" value="로그인">
